--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<title>My github website </tiltle>
+<title>My github website </title>
 <body>
 <hl>Welcome to my github sites </hl>
 <p> This is my github site </p>
